# processing_QNB_XLSX

./: .gitignore  main.py  pyproject.toml
