[project]
name = "processing-qnb-xlsx"
version = "0.1.0"
description = ""
authors = [
    {name = "v01d.dev",email = "v01d.dev.sh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
